--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
-        <image src="images/FTP_Logo2.png" alt="FTP Logo">
+        <image src="images/logo_light.png" alt="FTP Logo">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,11 +34,24 @@
 
   <!--Main Content-->
   <main>
+
     <!--Hero-->
-    <section>
+    <section class="hero-container">
+
       <div class="hero">
+        <form class="color-mode" action="">
+          <fieldset>
+            <legend class="radiobtn-notext"></legend>
+            <label for="light" class="radiobtn-notext">Light</label>
+            <input type="radio" name="mode" id="light">
+            <label for="dark" class="radiobtn-notext">Dark</label>
+            <input type="radio" name="mode" id="dark" checked>
+            <label for="blue" class="radiobtn-notext">Blue</label>
+            <input type="radio" name="mode" id="blue">
+          </fieldset>
+        </form>
         <div class="text">
-          <h1>FTPgames</h1>
+          <h1><span style="color: #17acb4">FTP</span>games</h1>
           <p>Free to play games library</p>
           <p id="tags">#mmorpg #shooter #strategy #moba #racing #sports, #social #sandbox #open-world #survival #pvp
             #pve
@@ -46,31 +59,49 @@
             #side-scroller #superhero #permadeath #card #battle-royale #mmo #mmofps #mmotps #3d #2d<br> #anime #fantasy
             #sci-fi #fighting #action-rpg #action #military #martial-arts #flight #low-spec #tower-defense #horror
             #mmorts</p>
-          <form>
-            <input id="genre" type="text" placeholder="Search.." class="input">
-          </form>
-          <div id="btn-div">
-            <button type="btn" id="btn1" class="submit" onclick="genreFunc()">Search</button>
-            <button type="btn" id="btn2" class="submit" onclick="refresh()">New Search</button>
-          </div>
-        </div>
-      </div>
     </section>
 
-    <!--Form-->
 
+    <div id="search-heading-div">
+      <h2 id="search-heading">Search for a tag or game catorgory you want</h2>
+    </div>
+
+    <!--Form-->
+    <div class="search-btn-div">
+      <input id="genre" type="text" placeholder="Search.." class="input">
+      <button type="btn" class="btn1" onclick="genreFunc()">
+        <p class="btn-text">Search</p>
+      </button>
+      <button type="btn" class="btn2" onclick="refresh()">
+        <p class="btn-text">New Search</p>
+      </button>
+    </div>
+    </div>
 
     <!--Grid with all the game cards-->
-
     <section id="grid-section">
       <div id="result">
 
       </div>
     </section>
 
-    <div>
-      <canvas id="myChart"></canvas>
+    <!--Chart container-->
+    <div id="chart-container">
+      <div id="chart">
+        <canvas id="myChart"></canvas>
+      </div>
     </div>
+
+
+
+
+
+
+
+
+
+
+
 
   </main>
 
@@ -81,6 +112,7 @@
   <!--JS links-->
   <script src="index.js"></script>
   <script src="chart.js"></script>
+  <script src="lightmode.js"></script>
   <!--Bootstrap link-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
