--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap demo</title>
+  <title>Cities</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
@@ -38,19 +38,17 @@
           <h1>Cities</h1>
     </section>
 
-    <!--PUT and DELETE Forms-->
+    <!--Forms-->
     <div id="get-cities-div">
-      <h2>Show, update, add or remove a city</h2>
+      <h2>Edit, add or remove a city</h2>
       <button type="button" id="show-cities" class="btn btn-primary" onclick="getCities()">Show Cities</button>
     </div>
 
     <div id="form-section">
 
-
-
       <!--Put-->
       <div id="put-form">
-        <p>Update City</p>
+        <h5>Edit City</h5>
         <div class="form-group">
           <label for="patch-id-input">ID Number</label>
           <input type="text" class="form-control" id="patch-id-input" placeholder="Enter ID">
@@ -63,11 +61,12 @@
           <label for="patch-pop-input">Population</label>
           <input type="text" class="form-control" id="patch-pop-input" placeholder="Population">
         </div>
-        <button type="button" id="patch-button" class="btn btn-primary" onclick="patchCity()">Add City</button>
+        <button type="button" id="put-button" class="btn btn-primary" onclick="patchCity()">Edit</button>
       </div>
 
       <!--POST-->
       <div id="post-form">
+        <h5>Add new City</h5>
         <div class="form-group">
           <label for="city-input">City</label>
           <input type="text" class="form-control" id="city-input" placeholder="City">
@@ -76,11 +75,12 @@
           <label for="pop-input">Population</label>
           <input type="text" class="form-control" id="pop-input" placeholder="Population">
         </div>
-        <button type="button" id="add-city-button" class="btn btn-primary" onclick="addCity()">Add City</button>
+        <button type="button" id="add-city-button" class="btn btn-primary" onclick="addCity()">Add</button>
       </div>
 
       <!--Delete-->
       <div id="delete-form-div">
+        <h5>Delete City</h5>
         <div class="form-group">
           <label for="del-input">Delete City</label>
           <input type="text" class="form-control" id="del-input" placeholder="Insert ID...">
@@ -93,23 +93,20 @@
     <!--Cities fetch div-->
     <div id="cities-grid-section">
       <div id="cities-div">
-
       </div>
     </div>
 
-
-
-
   </main>
+
   <!--Footer-->
   <footer id="footer">
-    <p>copyright 2022 all rights reserved</p>
+    <p style="color: white">Copyright © 2022 <span style="color:#17acb4">FTP</span>Games. All rights reserved.</p>
   </footer>
-
 
   <!--Script Links-->
   <script src="about.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
+
 </body>
