--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <title>Document</title>
+  <title>FTPGames</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -37,7 +37,6 @@
 
     <!--Hero-->
     <section class="hero-container">
-
       <div class="hero">
         <form class="color-mode" action="">
           <fieldset>
@@ -53,14 +52,8 @@
         <div class="text">
           <h1><span style="color: #17acb4">FTP</span>games</h1>
           <p>Free to play games library</p>
-          <p id="tags">#mmorpg #shooter #strategy #moba #racing #sports, #social #sandbox #open-world #survival #pvp
-            #pve
-            #pixel #voxel #zombie #turn-based #first-person<br> #third-Person #top-down #tank #space #sailing
-            #side-scroller #superhero #permadeath #card #battle-royale #mmo #mmofps #mmotps #3d #2d<br> #anime #fantasy
-            #sci-fi #fighting #action-rpg #action #military #martial-arts #flight #low-spec #tower-defense #horror
-            #mmorts</p>
+          <p id="tags"></p>
     </section>
-
 
     <div id="search-heading-div">
       <h2 id="search-heading">Search for a tag or game catorgory you want</h2>
@@ -68,7 +61,7 @@
 
     <!--Form-->
     <div class="search-btn-div">
-      <input id="genre" type="text" placeholder="Search.." class="input">
+      <input id="genre" type="text" placeholder="Search genre.." class="input">
       <button type="btn" class="btn1" onclick="genreFunc()">
         <p class="btn-text">Search</p>
       </button>
@@ -81,42 +74,38 @@
     <!--Grid with all the game cards-->
     <section id="grid-section">
       <div id="result">
-
       </div>
     </section>
 
     <!--Chart container-->
     <div id="chart-container">
+    
+      </h2>
       <div id="chart">
+        <h2>Top 10 downloaded games ever. <small>(Mobile Included)</small>
         <canvas id="myChart"></canvas>
       </div>
     </div>
 
-
-
-
-
-
-
-
-
-
-
-
   </main>
 
   <!--Footer-->
+  <footer id="footer">
+    <p style="color: white">Copyright © 2022 <span style="color:#17acb4">FTP</span>Games. All rights reserved.</p>
+  </footer>
 
   <!--Link to chart.js-->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <!--JS links-->
   <script src="index.js"></script>
   <script src="chart.js"></script>
-  <script src="lightmode.js"></script>
+  <script src="colormodes.js"></script>
   <!--Bootstrap link-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
