--- a/about.html
+++ b/about.html
@@ -10,10 +10,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="cities-body">
 
   <!--Navbar from Bootstrap-->
-  <nav class="navbar navbar-expand-lg bg-light">
+  <nav id="navbar-cities" class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="about.html">Cities</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -23,7 +23,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-          <a class="nav-link" href="index.html">FTPgames</a>
+          <a class="nav-link" href="index.html">F2Pgames</a>
         </div>
       </div>
     </div>
@@ -95,12 +95,11 @@
       <div id="cities-div">
       </div>
     </div>
-
   </main>
-
+<div id="scroll-div"></div>
   <!--Footer-->
-  <footer id="footer">
-    <p style="color: white">Copyright © 2022 <span style="color:#17acb4">FTP</span>Games. All rights reserved.</p>
+  <footer id="footer" id="footer-cities" class="cities-footer">
+    <p style="color: black">Copyright © 2022 Cities. All rights reserved.</p>
   </footer>
 
   <!--Script Links-->
