--- a/index.html
+++ b/index.html
@@ -5,18 +5,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="Gaming, Free to play, pc, xbox, playstation, free to play games">
+  <meta name="description" content="Free to play games library, free to play games, video games">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <title>FTPGames</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="images/favicon_io/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon_io/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon_io/favicon-16x16.png">
+  <link rel="manifest" href="images/favicon_io/site.webmanifest">
 </head>
 
-<body>
+<body class="home-body">
   <!--Navbar from Bootstrap-->
   <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
-        <image src="images/logo_light.png" alt="FTP Logo">
+        <image src="images/f2p_logo.avif" alt="FTP Logo">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,12 +37,12 @@
     </div>
   </nav>
 
-
   <!--Main Content-->
   <main>
 
     <!--Hero-->
     <section class="hero-container">
+
       <div class="hero">
         <form class="color-mode" action="">
           <fieldset>
@@ -50,25 +56,25 @@
           </fieldset>
         </form>
         <div class="text">
-          <h1><span style="color: #17acb4">FTP</span>games</h1>
+          <h1><span style="color: #17acb4">F2P</span>games</h1>
           <p>Free to play games library</p>
           <p id="tags"></p>
+        </div>
     </section>
 
     <div id="search-heading-div">
-      <h2 id="search-heading">Search for a tag or game catorgory you want</h2>
+      <h2 id="search-heading">Search for a game catorgory you want</h2>
     </div>
 
     <!--Form-->
     <div class="search-btn-div">
-      <input id="genre" type="text" placeholder="Search genre.." class="input">
+      <input id="genre" type="text" placeholder="Search.." class="input">
       <button type="btn" class="btn1" onclick="genreFunc()">
         <p class="btn-text">Search</p>
       </button>
       <button type="btn" class="btn2" onclick="refresh()">
         <p class="btn-text">New Search</p>
       </button>
-    </div>
     </div>
 
     <!--Grid with all the game cards-->
@@ -79,11 +85,10 @@
 
     <!--Chart container-->
     <div id="chart-container">
-    
       </h2>
       <div id="chart">
-        <h2>Top 10 downloaded games ever. <small>(Mobile Included)</small>
-        <canvas id="myChart"></canvas>
+        <h2>Top 10 downloaded f2p games. <small>(Mobile Included)</small>
+          <canvas id="myChart"></canvas>
       </div>
     </div>
 
@@ -91,7 +96,7 @@
 
   <!--Footer-->
   <footer id="footer">
-    <p style="color: white">Copyright © 2022 <span style="color:#17acb4">FTP</span>Games. All rights reserved.</p>
+    <p style="color: white">Copyright © 2022 F2Pgames. All rights reserved.</p>
   </footer>
 
   <!--Link to chart.js-->
@@ -104,8 +109,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
