--- a/index.html
+++ b/index.html
@@ -82,11 +82,15 @@
       <div id="result">
       </div>
     </section>
-
+    
     <section class="chart-text-container">
-      <h3 class="chart-text-heading">Lorem Ipsum</h3>
-      <div class="chart-lorem-text">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio, molestias, nesciunt commodi nemo, omnis minima est perspiciatis molestiae ea expedita labore consequatur eaque veniam neque ullam tempore repudiandae temporibus maiores. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia perferendis, tenetur accusantium omnis, ab voluptate eaque quisquam sint laudantium numquam a cupiditate aliquam minus odio expedita consequuntur quasi corrupti sunt.</p>
+      <div class="img-div">
+        <h3 class="chart-text-heading">Lorem Ipsum</h3>
+        <p class="chart-lorem-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio, molestias,
+          nesciunt commodi nemo, omnis minima est perspiciatis molestiae ea expedita labore consequatur eaque veniam
+          neque ullam tempore repudiandae temporibus maiores. Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+          Quia perferendis, tenetur accusantium omnis, ab voluptate eaque quisquam sint laudantium numquam a cupiditate
+          aliquam minus odio expedita consequuntur quasi corrupti sunt.</p>
       </div>
     </section>
 
